--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-loader": "1.3.x",
     "angular-mocks": "~1.3.x",
     "html5-boilerplate": "~4.3.0",
-    "bootstrap": "3.3.2"
+    "bootstrap": "3.3.2",
+    "font-awesome": "4.3.0"
   }
 }
