--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-mocks": "~1.3.x",
     "html5-boilerplate": "~4.3.0",
     "bootstrap": "3.3.2",
-    "font-awesome": "4.3.0"
+    "font-awesome": "4.3.0",
+    "textAngular": "1.3.9"
   }
 }
